crates/squealy-macros/tests/compile_fail/doubly_nullable_option.stderr
error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:9:13
  |
9 |     nested: C::Type<'scope, Option<Option<i32>>>,
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`
note: required by a bound in `squealy::ColumnMode::Type`
 --> $WORKSPACE/crates/squealy/src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`

error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`
note: required by a bound in `squealy::ColumnMode::Type`
 --> $WORKSPACE/crates/squealy/src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: this column must be set before `.insert()` (it is not nullable and has no default)
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `squealy::InsertReady<squealy::NonNullableColumn>` is not implemented for `__SquealyWidgetIdWriteInsertState`
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: this column must be set before `.insert()` (it is not nullable and has no default)
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `squealy::InsertReady<squealy::NullableColumn>` is not implemented for `__SquealyWidgetNestedWriteInsertState`
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`
note: required because it appears within the type `Widget<'static, ColumnNullableValue>`
 --> tests/compile_fail/doubly_nullable_option.rs:6:8
  |
6 | struct Widget<'scope, C: ColumnMode = ColumnExpr> {
  |        ^^^^^^
note: required by an implicit `Sized` bound in `Result`
 --> $RUST/core/src/result.rs
  |
  | pub enum Result<T, E> {
  |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Option<i32>: DecodeNullable<Backend>` is not satisfied
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `DecodeNullable<Backend>` is not implemented for `Option<i32>`
  |
  = help: the following other types implement trait `DecodeNullable<B>`:
            bool
            f32
            f64
            i128
            i16
            i32
            i64
            i8
          and $N others
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Option<i32>: Decode<Backend>` is not satisfied
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `Decode<Backend>` is not implemented for `Option<i32>`
  |
  = help: the following other types implement trait `Decode<B>`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
            (T0, T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `i32` to implement `DecodeNullable<Backend>`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Maybe<Widget<'static>>: ProjectionShape` is not satisfied
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `ProjectionShape` is not implemented for `Maybe<Widget<'static>>`
  |
help: the trait `ProjectionShape` is implemented for `Maybe<S>`
 --> $WORKSPACE/crates/squealy/src/projection.rs
  |
  | / impl<S> ProjectionShape for Maybe<S>
  | | where
  | |     S: SchemaTable,
  | |     <S as SchemaTable>::WithColumn<'static, ColumnNullableValue>: Send,
  | |     for<'scope> <S as SchemaTable>::NullableExprs<'scope>: Projectable,
  | |_______________________________________________________________________^
note: required by a bound in `squealy::ReturningProjection::Shape`
 --> $WORKSPACE/crates/squealy/src/query.rs
  |
  |     type Shape: ProjectionShape;
  |                 ^^^^^^^^^^^^^^^ required by this bound in `ReturningProjection::Shape`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: expected a `FnOnce(__SquealyWidgetExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Widget<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> P`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ expected an `FnOnce(__SquealyWidgetExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(<Widget<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> P`
  |
  = note: expected a closure with signature `fn(__SquealyWidgetExprsProjection<'static>)`
             found a closure with signature `fn(<Widget<'static> as ProjectionShape>::Exprs<'static>)`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: this column must be set before `.insert()` (it is not nullable and has no default)
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `squealy::InsertReady<squealy::NonNullableColumn>` is not implemented for `__SquealyWidgetIdWriteInsertState`
  |
note: required by a bound in `__SquealyWidgetWriteBuilder<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyWidgetIdWriteInsertState, __SquealyWidgetNestedWriteInsertState, __SquealyWidgetIdWriteUpdateState, __SquealyWidgetNestedWriteUpdateState>`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ required by this bound in `__SquealyWidgetWriteBuilder<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyWidgetIdWriteInsertState, __SquealyWidgetNestedWriteInsertState, __SquealyWidgetIdWriteUpdateState, __SquealyWidgetNestedWriteUpdateState>`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: this column must be set before `.insert()` (it is not nullable and has no default)
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ the trait `squealy::InsertReady<squealy::NullableColumn>` is not implemented for `__SquealyWidgetNestedWriteInsertState`
  |
note: required by a bound in `__SquealyWidgetWriteBuilder<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyWidgetIdWriteInsertState, __SquealyWidgetNestedWriteInsertState, __SquealyWidgetIdWriteUpdateState, __SquealyWidgetNestedWriteUpdateState>`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ required by this bound in `__SquealyWidgetWriteBuilder<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyWidgetIdWriteInsertState, __SquealyWidgetNestedWriteInsertState, __SquealyWidgetIdWriteUpdateState, __SquealyWidgetNestedWriteUpdateState>`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:9:29
  |
9 |     nested: C::Type<'scope, Option<Option<i32>>>,
  |                             ^^^^^^^^^^^^^^^^^^^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`

error[E0277]: expected a `FnOnce(&__SquealyWidgetExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(&<Widget<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> ::squealy::Predicate<'static, P, PredicateAst>`
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^ expected an `FnOnce(&__SquealyWidgetExprsProjection<'static>)` closure, found `impl ::std::ops::FnOnce(&<Widget<'static, ::squealy::ColumnExpr> as ::squealy::ProjectionShape>::Exprs<'static>) -> ::squealy::Predicate<'static, P, PredicateAst>`
  |
  = note: expected a closure with signature `fn(&__SquealyWidgetExprsProjection<'static>)`
             found a closure with signature `fn(&<Widget<'static> as ProjectionShape>::Exprs<'static>)`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^
  |          |
  |          expected `&<... as ProjectionShape>::Exprs<'_>`, found `&__SquealyWidgetExprsProjection<'_>`
  |          arguments to this function are incorrect
  |
  = note: expected reference `&<Widget<'static> as ProjectionShape>::Exprs<'static>`
             found reference `&__SquealyWidgetExprsProjection<'_>`
help: a method is available that returns `<Widget<'static> as ProjectionShape>::Exprs<'static>`
 --> $WORKSPACE/crates/squealy/src/projection.rs
  |
  |     fn exprs<'scope>(alias: SourceAlias) -> Self::Exprs<'scope>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider calling `exprs`
note: type parameter defined here
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^
  |          |
  |          expected associated type, found `__SquealyWidgetExprsProjection<'_>`
  |          arguments to this function are incorrect
  |
  = note: expected associated type `<Widget<'static> as ProjectionShape>::Exprs<'static>`
                      found struct `__SquealyWidgetExprsProjection<'_>`
help: a method is available that returns `<Widget<'static> as ProjectionShape>::Exprs<'static>`
 --> $WORKSPACE/crates/squealy/src/projection.rs
  |
  |     fn exprs<'scope>(alias: SourceAlias) -> Self::Exprs<'scope>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider calling `exprs`
note: type parameter defined here
 --> tests/compile_fail/doubly_nullable_option.rs:5:10
  |
5 | #[derive(Table)]
  |          ^^^^^
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<i32> as ColumnNullability>::Nullability == NonNullableColumn`
 --> tests/compile_fail/doubly_nullable_option.rs:5:14
  |
5 | #[derive(Table)]
  |              ^ expected `NonNullableColumn`, found `NullableColumn`
  |
  = note: required for `Option<Option<i32>>` to implement `ColumnNullability`
note: required by a bound in `squealy::ColumnMode::Type`
 --> $WORKSPACE/crates/squealy/src/column.rs
  |
  |     type Type<'scope, U>
  |          ---- required by a bound in this associated type
  |     where
  |         U: ColumnNullability;
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `ColumnMode::Type`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
